Clean up code and use assertj